objects/SLCarrier__c.object
<CustomObject>
    <fields>
        <fullName>Offered_By_Carrier__c</fullName>
        <label>Offered By Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CareFirst</fullName>
                </value>
                <value>
                    <fullName>IOARE</fullName>
                </value>
                <value>
                    <fullName>Symetra</fullName>
                </value>
                <value>
                    <fullName>HM</fullName>
                </value>
                <value>
                    <fullName>Sunlife</fullName>
                </value>
                <value>
                    <fullName>RAS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>SL_Carriers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Other_Offered_Carrier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Offered Carrier</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Declined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote Declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Quote Received</label>
        <type>Date</type>
    </fields>
    <description>Used as a related list for the Opportunity and Stop Loss Opportunity Page Layout to allow carrier date details to be entered</description>
    <label>SL Carrier</label>
    <nameField>
        <displayFormat>SLC{0000}</displayFormat>
        <label>SLC</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SL Carriers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>E001_Check_Create_Edit_Permission</fullName>
        <active>true</active>
        <description>Prevents any profile but Stop Loss or System Administrator from editing or saving records</description>
        <errorConditionFormula>IF(OR($Profile.Name = "Stop Loss", $Permission.Ignore_Validation_Rules), FALSE, TRUE)</errorConditionFormula>
        <errorMessage>001: You do not have the permission to create or edit Carrier records.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>E002_Other_Offered_Carrier1</fullName>
        <active>true</active>
        <description>If the user selects Other in the Offered By Carrier picklist then make sure the Other Offered Carrier text box has a value</description>
        <errorConditionFormula>ISPICKVAL(Offered_By_Carrier__c , "Other")  &amp;&amp; ISBLANK(Other_Offered_Carrier__c)</errorConditionFormula>
        <errorDisplayField>Other_Offered_Carrier__c</errorDisplayField>
        <errorMessage>002: Please type a value in the Other Offered Carrier field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>E003_Other_Offered_Carrier2</fullName>
        <active>true</active>
        <description>If the user selects anything but Other in the Offered By Carrier picklist then make sure the Other Offered Carrier text box is blank</description>
        <errorConditionFormula>NOT(ISPICKVAL(Offered_By_Carrier__c , "Other")) &amp;&amp; NOT(ISBLANK(Other_Offered_Carrier__c))</errorConditionFormula>
        <errorDisplayField>Offered_By_Carrier__c</errorDisplayField>
        <errorMessage>003: Select 'Other' when a value is in the Other Offered Carrier field</errorMessage>
    </validationRules>
</CustomObject>